--- a/1480. Running Sum of 1d Array.md
+++ b/1480. Running Sum of 1d Array.md
@@ -1,7 +1,8 @@
 # 1480. Running Sum of 1d Array
-
-Given an array nums. We define a running sum of an array as runningSum[i] = sum(nums[0]…nums[i]).
-Return the running sum of nums.
+   
+Given an array nums.   
+We define a running sum of an array as runningSum[i] = sum(nums[0]…nums[i]).   
+Return the running sum of nums.   
 
 Example 1:
 Input: nums = [1,2,3,4]
