Update 1. Two Sum.md

--- a/1. Two Sum.md
+++ b/1. Two Sum.md
@@ -18,7 +18,7 @@ Input: nums = [3,3], target = 6
 Output: [0,1]   
    
 # Answer
-```
+```java
 class Solution {
     public int[] twoSum(int[] nums, int target) {
         int[] array = new int[2];
