Update 9. Palindrome Number.md

--- a/9. Palindrome Number.md
+++ b/9. Palindrome Number.md
@@ -22,10 +22,10 @@ Explanation: Reads 01 from right to left. Therefore it is not a palindrome.
 class Solution {
     public boolean isPalindrome(int x) {
         String value = Integer.toString(x); // Change Integer to String: Integer.toString() method 
-        if(value.length() % 2 == 1) {
+        if(value.length()%2 == 1) {
             String first = value.substring(0, value.length()/2);
             String last = "";
-            for(int i = value.length() - 1; i > value.length()/2; i--) {
+            for(int i = value.length()-1; i > value.length()/2; i--) {
                 last = last + value.charAt(i); // Select a single character from a String: charAt()
             }
             if(first.equals(last)) {
@@ -39,7 +39,7 @@ class Solution {
         else {
             String first = value.substring(0, value.length()/2);
             String last = "";
-            for(int i = value.length() - 1; i >= value.length()/2; i--) {
+            for(int i = value.length()-1; i >= value.length()/2; i--) {
                 last = last + value.charAt(i); // Select a single character from a String: charAt()
             }
             if(first.equals(last)) {
