Update 14. Longest Common Prefix.md

--- a/14. Longest Common Prefix.md
+++ b/14. Longest Common Prefix.md
@@ -30,7 +30,7 @@ class Solution {
         }
         return prefix;
 
-        /*
+        /* Flowchart
         prefix = "flower"
         "flow".indexOf("flower") -> find "flower" in "flow" -> return -1
         prefix = "flower".substring(0, 5) -> "flowe"
