--- a/58. Length of Last Word.md
+++ b/58. Length of Last Word.md
@@ -17,8 +17,25 @@ Example 3:
 Input: s = "luffy is still joyboy"   
 Output: 6   
 Explanation: The last word is "joyboy" with length 6.   
-   
+    
 # Reference
 <https://www.youtube.com/watch?v=EDEwDYYkC2E>
-
+    
 # Answer
+'''java
+class Solution {
+    public int lengthOfLastWord(String s) {
+        String trimmedword = s.trim(); // trim() method removes whitespace from both ends of a string.
+        int count = 0;
+        for(int i = trimmedword.length()-1; i >= 0; i--) {
+            if(trimmedword.charAt(i) != ' ') {
+                count++;
+            }
+            else {
+                break;
+            }
+        }
+        return count;
+    }
+}
+```
