Update 58. Length of Last Word.md

--- a/58. Length of Last Word.md
+++ b/58. Length of Last Word.md
@@ -22,7 +22,7 @@ Explanation: The last word is "joyboy" with length 6.
 <https://www.youtube.com/watch?v=EDEwDYYkC2E>
     
 # Answer
-'''java
+```ava
 class Solution {
     public int lengthOfLastWord(String s) {
         String trimmedword = s.trim(); // trim() method removes whitespace from both ends of a string.
