--- a/66. Plus One.md
+++ b/66. Plus One.md
@@ -41,7 +41,7 @@ class Solution {
             
         }
         int[] result = new int[digits.length+1];
-        result[0] = 1;
+        result[0] = 1; // The default value for int type arrays is 0
         return result;
     }
 }
