--- a/35. Search Insert Position.md
+++ b/35. Search Insert Position.md
@@ -17,7 +17,7 @@ Input: nums = [1,3,5,6], target = 7
 Output: 4   
 
 # Answer
-```ja
+```java
 class Solution {
     public int searchInsert(int[] nums, int target) {
         int index = 0;
