--- a/977. Squares of a Sorted Array.md
+++ b/977. Squares of a Sorted Array.md
@@ -19,7 +19,8 @@ class Solution {
         for(int i = 0; i < nums.length; i++) {
             nums[i] = (int) Math.pow(nums[i],2);
         }
-        Arrays.sort(nums);
+        Arrays.sort(nums); // Ascending order : Arrays.sort(array)
+                           // Descending sort : Arrays.sort(array,Collections.reverseOrder())
         return nums;
     }
 }
