Update 1089. Duplicate Zeros.md

--- a/1089. Duplicate Zeros.md
+++ b/1089. Duplicate Zeros.md
@@ -1,5 +1,5 @@
 # 1089. Duplicate Zeros
-
+   
 Given a fixed-length integer array arr, duplicate each occurrence of zero, shifting the remaining elements to the right.   
 Note that elements beyond the length of the original array are not written. Do the above modifications to the input array in place and do not return anything.   
 
@@ -20,16 +20,16 @@ Explanation: After calling your function, the input array is modified to: [1,2,3
 ```java
 class Solution {
     public void duplicateZeros(int[] arr) {
-        Queue<Integer> queue = new LinkedList<>();
+        Queue<Integer> queue = new LinkedList<>();  // Declare an integer type queue
         for(int i = 0; i < arr.length; i++) {
             if(arr[i] == 0) {
-                queue.add(0);
-                queue.add(0);
+                queue.add(0); // Add 0 to the queue
+                queue.add(0); // Add 0 to the queue
             }
             else {
-                queue.add(arr[i]);
+                queue.add(arr[i]); // Add arr[i] to the queue
             }
-            Integer first = queue.poll();
+            Integer first = queue.poll(); // Delete and return the first element of the queue.
             arr[i] = first;
         }
     }
