--- a/1089. Duplicate Zeros.md
+++ b/1089. Duplicate Zeros.md
@@ -1,7 +1,8 @@
 # 1089. Duplicate Zeros
    
 Given a fixed-length integer array arr, duplicate each occurrence of zero, shifting the remaining elements to the right.   
-Note that elements beyond the length of the original array are not written. Do the above modifications to the input array in place and do not return anything.   
+Note that elements beyond the length of the original array are not written.   
+Do the above modifications to the input array in place and do not return anything.   
 
 Example 1:   
 Input: arr = [1,0,2,3,0,4,5,0]   
