Update 27. Remove Element.md

--- a/27. Remove Element.md
+++ b/27. Remove Element.md
@@ -20,6 +20,9 @@ Explanation: Your function should return k = 5, with the first five elements of 
 Note that the five elements can be returned in any order.   
 It does not matter what you leave beyond the returned k (hence they are underscores).   
 
+# Reference
+<https://www.youtube.com/watch?v=SKI8IirQZgo>
+
 # Answer
 ```java
 class Solution {
@@ -34,4 +37,18 @@ class Solution {
         return k;
     }
 }
+
+/*
+[0,1,2,2,3,0,4,2]
+2
+
+0   index = 0 ; i = 0 ; nums[0] = nums[0] = 0
+1   index = 1 ; i = 1 ; nums[1] = nums[1] = 1
+2   index = 2 ; i = 2
+2   index = 2 ; i = 3
+3   index = 2 ; i = 4 ; nums[2] = nums[4] = 3
+0   index = 3 ; i = 5 ; nums[3] = nums[5] = 0
+4   index = 4 ; i = 6 ; nums[4] = nums[6] = 4
+2   index = 5 ; i = 7
+*/
 ```
