--- a/27. Remove Element.md
+++ b/27. Remove Element.md
@@ -38,8 +38,8 @@ class Solution {
 }
 
 /*
-[0,1,2,2,3,0,4,2]
-2
+nums = [0,1,2,2,3,0,4,2]
+val = 2
 
 0   index = 0 ; i = 0 ; nums[0] = nums[0] = 0
 1   index = 1 ; i = 1 ; nums[1] = nums[1] = 1
